WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315620
Navigating to a page with a model tag crashes in recovery mode
https://bugs.webkit.org/show_bug.cgi?id=315620
Summary
Navigating to a page with a model tag crashes in recovery mode
Mike Wyrzykowski
Reported
2026-05-26 17:00:51 PDT
Navigating to a page with a model tag crashes in recovery mode
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-05-26 17:00:57 PDT
<
rdar://problem/177993583
>
Mike Wyrzykowski
Comment 2
2026-05-26 22:14:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65754
EWS
Comment 3
2026-05-27 10:19:50 PDT
Committed
313978@main
(0733f639c1a5): <
https://commits.webkit.org/313978@main
> Reviewed commits have been landed. Closing PR #65754 and removing active labels.
Karl Rackler
Comment 4
2026-05-27 12:56:08 PDT
Reopened Bugzilla. This reverts because it broke the build on the bots., tracking revert in
https://bugs.webkit.org/show_bug.cgi?id=315686
.
Mike Wyrzykowski
Comment 5
2026-05-27 13:06:03 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65810
EWS
Comment 6
2026-05-27 14:08:49 PDT
Committed
313998@main
(20b5d9489dd8): <
https://commits.webkit.org/313998@main
> Reviewed commits have been landed. Closing PR #65810 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug