Navigating to a page with a model tag crashes in recovery mode https://bugs.webkit.org/show_bug.cgi?id=315620 rdar://177993583

Reviewed by Etienne Segonzac.

We don't support model in recovery mode since the frameworks are not
present, report it as unsupported.

* Source/WebCore/Modules/model-element/HTMLModelElement.cpp:
(WebCore::HTMLModelElement::createElementRenderer):
(WebCore::HTMLModelElement::contentSize const):
* Source/WebCore/Modules/model-element/ModelPlayerProvider.h:
* Source/WebKit/WebProcess/Model/WebModelPlayerProvider.cpp:
(WebKit::isRunningInVirtualMachine):
(WebKit::isRunningInRecoveryOS):
(WebKit::WebModelPlayerProvider::isAvailable const):
(WebKit::WebModelPlayerProvider::createModelPlayer):
* Source/WebKit/WebProcess/Model/WebModelPlayerProvider.h:

Canonical link: https://commits.webkit.org/313978@main